--- a/Profolio_website-main/myportfolio/package.json
+++ b/Profolio_website-main/myportfolio/package.json
@@ -15,9 +15,10 @@
     "@tsparticles/react": "^3.0.0",
     "bootstrap": "^5.3.3",
     "framer-motion": "^11.3.12",
-    "gsap": "^3.12.5",
+    "gsap": "^3.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.13.0",
     "react-tsparticles": "^2.12.2",
     "react-vertical-timeline-component": "^3.6.0",
@@ -27,11 +28,11 @@
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
+    "@vitejs/plugin-react": "^1.3.2",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
-    "vite": "^5.3.4"
+    "vite": "^6.1.0"
   }
 }
